cargo-features = ["edition2024"]

[package]
name = "stm32f401re"
version = "0.1.0"
edition = "2024"
authors = ["John Bryan Valle <jbvalle.jv@gmail.com>"]
description = "Peripherals package for stm32f401re"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbvalle/rust_pkg_stm32f401re"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.5.0", default-features = false }

